apps/dev/ingress/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: moni
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: prome.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prome-svc
                port:
                  number: 9090
    - host: node.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-exporter
                port:
                  number: 9100
